# nyan_browser

./: .gitignore  Cargo.toml  README.md  kawaii_bookmarks.json  kawaii_history.json  setup.sh
src/: __main__.py  browser.py  browser.rs  config.rs  error.rs  lib.rs  main.rs  monitoring.rs  services.rs  utils.rs
src/assets/styles/: main.css
src/assets/templates/: header.html  home.html
src/config/: settings.py
src/constants/: templates.rs
src/core/: browser.py  browser_cache.rs  cache.rs  connection_pool.rs  error.rs  mod.rs
src/features/: adblock.rs  anime.rs  automation.rs  battery_saver.rs  capture.rs  devtools.rs  extension_dev.rs  extensions.rs  mod.rs  performance.rs  testing.rs  themes.rs  turbo.rs  vpn.rs  workspace.rs
src/features/network/: mod.rs  monitor.rs  tools.rs
src/resources/html/: homepage.html
src/services/: mod.rs  webview.py
