[package]
name = "nyan_browser"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
fantoccini = { version = "0.19", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
log = "0.4"
env_logger = "0.10"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
image = "0.24"
rand = "0.8"
tempfile = "3.8"
thiserror = "1.0"
futures = "0.3"
dirs = "5.0"
notify = "6.0"  # For file watching
regex = "1.9"   # For pattern matching
reqwest = { version = "0.11", features = ["json"] }
tokio-util = "0.7"
async-trait = "0.1"
lru = "0.10"
retry = "2.0"
futures-retry = "0.6"
lazy_static = "1.4"

[dev-dependencies]
pretty_assertions = "1.3"
mockall = "0.11"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
