[package]
name = "nyan_browser"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
fantoccini = { version = "0.19", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
colored = "2.0"
anyhow = "1.0"
futures = "0.3"
parking_lot = "0.12"
dirs = "5.0"
toml = "0.7"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
image = "0.24"
async-trait = "0.1"
lazy_static = "1.4"
lru = "0.11"
tracing = "0.1"
regex = "1.10"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[profile.dev]
lto = false
panic = "abort"
