[package]
name = "nyan_browser"
version = "0.1.0"
edition = "2021"
authors = ["kyuna312"]
description = "A kawaii web browser written in Rust"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
fantoccini = { version = "0.19", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.10"
colored = "2.0"
anyhow = "1.0"
futures = "0.3"
parking_lot = "0.12"
dirs = "5.0"
toml = "0.7"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
image = { version = "0.24", default-features = false, features = ["png"] }
async-trait = "0.1"
lazy_static = "1.4"
lru = "0.11"
tracing = { version = "0.1", features = ["attributes"] }
regex = { version = "1.10", default-features = false }
rayon = "1.7"
once_cell = "1.17"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
debug = false

[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked"

[profile.test]
opt-level = 3
debug = true

[features]
default = ["all-features"]
all-features = ["turbo", "battery-saver", "adblock"]
turbo = []
battery-saver = []
adblock = []
